<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context="com.example.rschmitt.messageencryptor.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        >

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/Message"
                    style="@style/EditTextMemoAttributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/message"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/Output"
                    style="@style/EditTextMemoAttributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/output"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Decrypt_Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/decrypt"
                    android:theme="@style/Button"/>

                <Button
                    android:id="@+id/Encrypt_Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/encrypt"
                    android:theme="@style/Button"/>

            </LinearLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/Share_Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/share"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/Copy_To_Clipboard_Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/copy_to_clipboard"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/Decrypt_on_startup_Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/decrypt_on_startup"/>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
